# inflect-etna

./: .gitignore  BUGS.md  README.md  TASKS.md  etna.toml  pyproject.toml
etna/: pyproject.toml
etna/etna_runner/: __init__.py  _result.py  properties.py  runner.py  strategies.py  witnesses.py
etna/tests/: test_property_indef_article_abbrev.py  test_property_louse_lice_plural.py  test_property_ordinal_accepts_numeric.py  test_property_plural_apostrophe_no_crash.py  test_property_plural_shoe_returns_shoes.py  test_property_pound_force_pluralizes_pound.py  test_witnesses.py
patches/: a_not_incorrectly_abbreviated_924695c_1.patch  louse_lice_plural_8d610f3_1.patch  ordinal_accepts_numeric_27b2157_1.patch  plural_apostrophe_no_crash_498619b_1.patch  pound_force_pluralizes_pound_f87c0b9_1.patch  shoes_is_plverb_oe_36269c1_1.patch
